--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon --inspect bin/www"
   },
   "author": "",
   "license": "ISC",
@@ -15,9 +15,12 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
+    "jw": "^0.0.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.2",
+    "nodemon": "^3.0.1",
     "router": "^1.3.8"
   }
 }
