--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "aws-sdk": "^2.1490.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "cours": "^1.0.0",
     "crypto": "^1.0.1",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
